// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberedListItem > renders empty numbered list item 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="text-foreground bg-transparent text-left wrap-break-word leading"
    />
  </ol>
</DocumentFragment>
`;

exports[`NumberedListItem > renders numbered list item with link 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="text-foreground bg-transparent text-left wrap-break-word leading"
    >
      Visit 
      <a
        class="inline-block max-w-full rounded wrap-break-word text-blue-600 decoration-2 underline-offset-2 transition-colors 
            hover:text-blue-800 hover:underline focus:ring-2 focus:ring-blue-300 focus:outline-none 
            dark:text-blue-300 dark:hover:text-blue-100 dark:focus:ring-blue-700"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="underline underline-offset-4"
        >
          Example
        </span>
      </a>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`NumberedListItem > renders numbered list item with styled text 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="text-foreground bg-transparent text-left wrap-break-word leading"
    >
      <span
        class="italic"
      >
        Italic 
      </span>
      text
    </li>
  </ol>
</DocumentFragment>
`;

exports[`NumberedListItem > renders simple numbered list item 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="text-foreground bg-transparent text-left wrap-break-word leading"
    >
      First item
    </li>
  </ol>
</DocumentFragment>
`;
